K8S/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8.2-management
          ports:
            - containerPort: 15672
              name: rabbitmq-manage
            - containerPort: 5672
              name: rabbitmq-msg
---
apiVersion: v1
kind : Service
metadata:
  name : rabbitmq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-manage
      protocol: TCP
      port:  15672
      targetPort:  15672
    - name: rabbitmq-msg
      protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-manage
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rabbitmq-msg
      protocol: TCP
      port: 5672
      targetPort: 5672
